--- a/src/app/dealers/retailers/retailer-detail/retailer-detail.component.scss
+++ b/src/app/dealers/retailers/retailer-detail/retailer-detail.component.scss
@@ -39,3 +39,18 @@
     }
   }
 }
+table{
+  width: 100% 
+}
+#cardComment{
+  .mdl-card{
+  .mdl-card__title{
+  width: 100%;
+background-color: #2F4F4F;
+}
+.mdl-card__suporting-text{
+  width: 100%;
+background-color: #d3d3d3;
+}
+  }
+}
