--- a/src/app/dealers/distributors/distributor-list/distributor-list.component.html
+++ b/src/app/dealers/distributors/distributor-list/distributor-list.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
   </div>
-  <div class="mdl-cell mdl-cell--4-col" *ngFor="let distributor of distributors">
+  <div class="mdl-cell mdl-cell--4-col" *ngFor="let distributor of distributors | paginate: { itemsPerPage: 9, currentPage: page }">
     <mdl-card mdl-shadow="4">
     <mdl-card-title [style.background-image]="getUrl(distributor.photo.url)">
       <h2 mdl-card-title-text>{{distributor.name}}</h2>
@@ -29,5 +29,12 @@
       </button>
     </mdl-card-menu>
   </mdl-card>
+  </div>
+    <div class ="mdl-grid">
+     <pagination-controls (pageChange)="page = $event"
+                          previousLabel= "Anterior"
+                          nextLabel = "Siguiente"
+     >
+     </pagination-controls> 
   </div>
 </div>
