--- a/src/app/dealers/products/product-create/product-create.component.html
+++ b/src/app/dealers/products/product-create/product-create.component.html
@@ -5,7 +5,7 @@
       <h2 class="mdl-card__title-text ">Nuevo Producto</h2>
     </div>
 
-    <form action="#">
+    <form action="#" #createProduct= "ngForm" (ngSubmit)= "onSubmit()">
     <div class="mdl-card__supporting-text " >
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--6-col">
@@ -13,9 +13,9 @@
 
           <image-upload
               [dropBoxMessage]="'Arrastra tu imagen aqui!'"
-
+              (onFileUploadFinish)="imageUploaded($event)"
           ></image-upload>
-          <input type="file" (change)="selectFile($event)">
+
           </div>
         </div>
 
@@ -25,15 +25,15 @@
           <br>
           <mdl-textfield type="text" label="Nombre" id="name1" name1="name1" #name1= "ngModel" type="text"
 
-                  [(ngModel)]="name" floating-label [ngModelOptions]="{standalone: true}" >
+                  [(ngModel)]="name" floating-label [ngModelOptions]="{standalone: true}" autofocus required>
           </mdl-textfield>
           <br>
-          <mdl-textfield  type="number" label="Precio"  id="price1" price1="price1" #price1="ngModel"
-                          [(ngModel)]="price" floating-label [ngModelOptions]="{standalone: true}" error-msg="Input is not a number!">
+          <mdl-textfield  type="number" label="Precio"  id="price1" price1="price1" #price1="ngModel" min="0" step="0.00001"
+                          [(ngModel)]="price" floating-label [ngModelOptions]="{standalone: true}" error-msg="Input is not a number!"  required>
           </mdl-textfield>
           <br>
-          <mdl-textfield type="number" label="Peso" id="peso1" peso1="peso1" #peso1= "ngModel"
-                          [(ngModel)]="weight" floating-label [ngModelOptions]="{standalone: true}" error-msg="Input is not a number!" >
+          <mdl-textfield type="number" label="Peso" id="peso1" peso1="peso1" #peso1= "ngModel" min="0" step="0.00001"
+                          [(ngModel)]="weight" floating-label [ngModelOptions]="{standalone: true}" error-msg="Input is not a number!"  required>
           </mdl-textfield>
 
           <br>
@@ -52,12 +52,16 @@
           </mdl-checkbox>
           <br>
           <br>
-
           <mdl-textfield type="text" label="Nueva Categoria" id="cat" cat="cat" #cat= "ngModel" type="text"
 
                 [disabled]="!newCategory()"  [(ngModel)]="category_select" floating-label [ngModelOptions]="{standalone: true}" >
           </mdl-textfield>
-
+          <br>
+          <br>
+          <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple type="submit" [disabled]="!createProduct.valid"
+                  >
+              Crear
+          </button>
         </div>
         </div>
       </div>
