--- a/src/app/dealers/orders/order-list/order-list.component.html
+++ b/src/app/dealers/orders/order-list/order-list.component.html
@@ -21,7 +21,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr  *ngFor="let item of orders; let i = index">
+      <tr  *ngFor="let item of orders; let i = index; ">
         <td class="mdl-data-table__cell--non-numeric" >{{i}}</td>
         <td>{{item.state}}</td>
 
@@ -38,9 +38,9 @@
                         </tr>
                   </thead>
                   <tbody>
-                    <tr  *ngFor="let order of item.orderProducts; let j = index">
+                    <tr  *ngFor="let order of item.orderProducts; let j = index ;">
                      <td> {{j}} </td>
-                      <td>nombre</td>
+                      <td>{{ofpbpi[item.offeredProducts[j].id]}}</td>
                       <td>{{order.quantity}}</td>
                       <td>{{order.price}}</td>
                     </tr>
