--- a/src/app/dealers/retailers/retailer-detail/retailer-detail.component.html
+++ b/src/app/dealers/retailers/retailer-detail/retailer-detail.component.html
@@ -87,8 +87,10 @@
  <mdl-card mdl-shadow="4" id="map-card">
     <mdl-card-title mdl-card-expand>
       <ng2-map id="map" center="{{retailer.latitude}} {{retailer.longitude}}" zoom="17" scrollwheel="false" >
-        <marker position="{{retailer.latitude}} {{retailer.longitude}}"></marker>
+        <marker position="{{retailer.latitude}} {{retailer.longitude}}" icon='http://maps.google.com/mapfiles/kml/pal2/icon10.png'></marker>
+        <marker *ngFor="let coordinate of coordinates" position="{{coordinate.lat}} {{coordinate.lng}}" icon='http://maps.google.com/mapfiles/ms/micons/truck.png'></marker>        
       </ng2-map>
+      
     </mdl-card-title>
     <mdl-card-supporting-text>
       {{retailer.location}}
