--- a/src/app/dealers/dealers.component.html
+++ b/src/app/dealers/dealers.component.html
@@ -1,23 +1,10 @@
-<!--<mdl-layout mdl-layout-fixed-header>
-  <mdl-layout-header class="mdl-color--indigo-700">
-      <mdl-layout-header-row>
-        <mdl-layout-spacer></mdl-layout-spacer>
-            <a class="mdl-navigation__link logout" href="#" routerLink="/"><i class="material-icons md-36 md-light"  mdl-badge="1" mdl-badge-overlap>shopping_cart</i></a>
-            <button mdl-button #btn1="mdlButton" (click)="m1.toggle($event, btn1)" mdl-button-type="icon" mdl-ripple style="width: 50px; height:auto;"><img src="src/assets/img/duck.png" id="profile-pic"></button>
-                <mdl-menu #m1="mdlMenu" mdl-menu-position="bottom-right">
-                    <mdl-menu-item mdl-ripple (click)="goToProfile()">Mi Perfil</mdl-menu-item>
-                    <mdl-menu-item mdl-ripple mdl-menu-item-full-bleed-divider (click)="goToOrders()">Mis Ordenes</mdl-menu-item>
-                    <mdl-menu-item mdl-ripple (click)="logout()">Cerrar sesión</mdl-menu-item>
-                </mdl-menu>
-      </mdl-layout-header-row>
--->
 <div class="container">
     <div class="app-header" mdl-shadow="2">
         <div class="nav-logo">
             <img src="src/assets/img/logo.png">
         </div>
         <div class="floating-right">
-            <a class="mdl-navigation__link logout" href="#" routerLink="/"><i class="material-icons md-48 md-light"  mdl-badge="1" mdl-badge-overlap>notifications</i></a>
+            <a *ngIf="userType=='RETAILER'" class="mdl-navigation__link logout" href="#" routerLink="/"><i class="material-icons md-48 md-light"  mdl-badge="1" mdl-badge-overlap>shopping_cart</i></a>
             <button mdl-button #btn1="mdlButton" (click)="m1.toggle($event, btn1)" mdl-button-type="icon" mdl-ripple style="width: 60px; height:auto;"><img src="src/assets/img/duck.png" id="profile-pic"></button>
             <mdl-menu #m1="mdlMenu" mdl-menu-position="bottom-right">
                 <mdl-menu-item mdl-ripple (click)="goToProfile()">Mi Perfil</mdl-menu-item>
@@ -48,10 +35,16 @@
                             <h4>Ordenes</h4>
                         </a>
                     </li>
-                    <li>
+                    <li *ngIf="userType=='RETAILER'">
                         <a class="mdl-navigation__link" routerLink="distributors" routerLinkActive='active'>
                             <i class="material-icons md-36">account_circle</i>
                             <h4>Distribuidores</h4>
+                        </a>
+                    </li>
+                    <li *ngIf="userType=='DISTRIBUTOR'">
+                        <a class="mdl-navigation__link" routerLink="retailers" routerLinkActive='active'>
+                            <i class="material-icons md-36">account_circle</i>
+                            <h4>Minoristas</h4>
                         </a>
                     </li>
                     <li>
