--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,3 +1,45 @@
 mdl-textfield{
     width:90%; 
 }
+
+.app-header{
+  top: 0;
+  width: 100vw;
+  height: 25vh;
+  position: absolute;
+  background-image: url('/src/assets/img/layout/header-background.jpg');
+  background-position-y: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  .nav-logo{
+    img{
+      margin-left: 2.5vmax;
+      margin-top: 2vmax;
+      width: 13vmax;
+    }
+  }
+}
+
+.app-body{
+  width: 99vw;
+  top: 15vh;
+  position: absolute;
+  bottom: 0;
+  .app-content{
+    overflow-y: scroll;
+    background-color: #FFF;
+  }
+}
+
+#custom-scroll::-webkit-scrollbar-track {
+  background-color: #FFF;
+}
+
+#custom-scroll::-webkit-scrollbar {
+  width: 6px;
+  background-color: #FFF;
+}
+
+#custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #555;
+}
