--- a/src/app/dealers/products/product-create/product-create.component.scss
+++ b/src/app/dealers/products/product-create/product-create.component.scss
@@ -3,11 +3,12 @@
   margin-top: 25px;
   width: 900px;
   height: auto;
+  margin-bottom: 50px;
 }
 #card-title{
   color: purple;
   height:: 100px;
-  background: url('../../../../assets/img/products/background.png');
+  background: url('../../../../assets/img/products/backgroundb.jpg');
 
 }
 #image-upload{
