--- a/src/app/dealers/products/product-detail/product-detail.component.html
+++ b/src/app/dealers/products/product-detail/product-detail.component.html
@@ -29,6 +29,7 @@
 				</li>
 		</ul>
 	</div>
+  <app-productd-retailer></app-productd-retailer>
   <div class="mdl-cell mdl-cell--4-col">
     <mdl-card mdl-shadow="4" id="map-card">
      <mdl-card-title mdl-card-expand>
