--- a/src/app/dealers/dealers.component.html
+++ b/src/app/dealers/dealers.component.html
@@ -4,7 +4,7 @@
             <img src="src/assets/img/logo.png">
         </div>
         <div class="floating-right">
-            <a *ngIf="userType=='RETAILER'" class="mdl-navigation__link logout" href="#" routerLink="/"><i class="material-icons md-48 md-light"  mdl-badge="1" mdl-badge-overlap>shopping_cart</i></a>
+            <a *ngIf="userType=='RETAILER'" class="mdl-navigation__link icon-button" (click)="openCart()"><i class="material-icons md-48 md-light"  [mdl-badge]="cartProducts.length" mdl-badge-overlap>shopping_cart</i></a>
             <button mdl-button #btn1="mdlButton" (click)="m1.toggle($event, btn1)" mdl-button-type="icon" mdl-ripple style="width: 60px; height:auto;"><img src="src/assets/img/duck.png" id="profile-pic"></button>
             <mdl-menu #m1="mdlMenu" mdl-menu-position="bottom-right">
                 <mdl-menu-item mdl-ripple (click)="goToProfile()">Mi Perfil</mdl-menu-item>
@@ -62,8 +62,20 @@
                 </ul>
             </nav>
         </div>
-        <div class="app-content mdl-cell mdl-cell--10-col" id="custom-scroll" mdl-shadow="4">
+        <div class="app-content mdl-cell mdl-cell--10-col custom-scroll" mdl-shadow="4">
             <router-outlet></router-outlet>
+            <div class="shopping-cart" *ngIf="shoppingCart">
+                <div class="cart-products custom-scroll">
+                    <div class="individual-product" *ngFor="let product of cartProducts">
+                        {{product.name}}
+                        <i (click)="deleteProduct(product)">x</i>
+                    </div>
+                </div>
+                <div class="cart-actions">
+                    <button mdl-button (click)="closeCart()" mdl-button-type="icon"><mdl-icon>expand_more</mdl-icon></button>      
+                    <button mdl-button (click)="emptyCart()" mdl-button-type="icon"><mdl-icon>remove_shopping_cart</mdl-icon></button>      
+                </div>
+            </div>
         </div>
     </div>
 </div>
