--- a/src/app/dealers/dealers.component.scss
+++ b/src/app/dealers/dealers.component.scss
@@ -6,6 +6,18 @@
   border-radius: 50%;
 }
 
+.icon-button{
+  &:hover{
+    cursor: pointer;
+  }
+}
+
+#close-button{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .app-header{
   top: 0;
   width: 100vw;
@@ -83,15 +95,39 @@
 }
 
 
-#custom-scroll::-webkit-scrollbar-track {
+.custom-scroll::-webkit-scrollbar-track {
   background-color: #FFF;
 }
 
-#custom-scroll::-webkit-scrollbar {
+.custom-scroll::-webkit-scrollbar {
   width: 6px;
   background-color: #FFF;
 }
 
-#custom-scroll::-webkit-scrollbar-thumb {
+.custom-scroll::-webkit-scrollbar-thumb {
   background-color: #555;
+}
+
+.cart-products{
+  background-color: #FFF;
+  position: absolute; 
+  height: 20vh;
+  width: 81.1%;
+  z-index: 1000;
+  border-top: 0.2px solid #CCC;
+  bottom: 6.5vh;
+  overflow-y: scroll;
+}
+
+.cart-actions{
+  background-color: #CCC;
+  position: absolute;
+  height: 4.5vh;
+  width: 81.1%;
+  z-index: 1000;
+  border-top: 0.2px solid #CCC;
+  bottom: 2vh;
+  button{
+    float: right;
+  }
 }
