--- a/src/app/dealers/retailers/retailer-detail/retailer-detail.component.html
+++ b/src/app/dealers/retailers/retailer-detail/retailer-detail.component.html
@@ -37,7 +37,7 @@
       <mdl-card-menu>
         <button mdl-button #btn1="mdlButton" (click)="m1.toggle($event, btn1)" mdl-button-type="icon" mdl-ripple><mdl-icon>more_vert</mdl-icon></button>
         <mdl-menu #m1="mdlMenu" mdl-menu-position="bottom-right">
-           <mdl-menu-item mdl-ripple (click)="action()">Some Action</mdl-menu-item>
+           <mdl-menu-item mdl-ripple (click)="favorites()">Favoritos</mdl-menu-item>
            <mdl-menu-item mdl-ripple mdl-menu-item-full-bleed-divider>Another Action</mdl-menu-item>
            <mdl-menu-item mdl-ripple disabled>Disabled Action</mdl-menu-item>
            <mdl-menu-item>Yet Another Action</mdl-menu-item>
