--- a/src/app/dealers/dealers.component.html
+++ b/src/app/dealers/dealers.component.html
@@ -72,13 +72,13 @@
                     <div class="individual-product" *ngFor="let product of cartProducts">
                         <img src={{product.photo.url}} class="product-photo">
                         <span class="name">{{product.name}} x {{product.quantity}} unidades</span>
-                        <a class="icon-button delete-button" (click)="deleteProduct(product)"><i class="material-icons md-48 md-dark">delete</i></a>
+                        <a class="icon-button delete-button" (click)="askDelete(product)"><i class="material-icons md-48 md-dark">delete</i></a>
                     </div>
                 </div>
                 <div class="cart-actions">
                     <button mdl-button (click)="closeCart()" mdl-button-type="icon"><mdl-icon>expand_more</mdl-icon></button>      
-                    <button mdl-button (click)="emptyCart()" mdl-button-type="icon"><mdl-icon>remove_shopping_cart</mdl-icon></button>      
-                    <button mdl-button (click)="makeOrder()" mdl-button-type="icon"><mdl-icon>assignment_turned_in</mdl-icon></button>
+                    <button mdl-button (click)="askEmpty()" mdl-button-type="icon"><mdl-icon>remove_shopping_cart</mdl-icon></button>      
+                    <button mdl-button (click)="askOrder()" mdl-button-type="icon"><mdl-icon>assignment_turned_in</mdl-icon></button>
                 </div>
             </div>
         </div>
